[package]
name = "aoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[[bin]]
name = "day1"
path = "day1.rs"

[[bin]]
name = "day2"
path = "day2.rs"

[[bin]]
name = "day3"
path = "day3.rs"

[[bin]]
name = "day4"
path = "day4.rs"

[[bin]]
name = "day5"
path = "day5.rs"

[[bin]]
name = "stats"
path = "stats.rs"

[[bin]]
name = "template"
path = "template.rs"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
ureq = "2.3.1"
