[package]
name = "aoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

# 2021
[[bin]]
name = "day1"
path = "day1.rs"

[[bin]]
name = "day2"
path = "day2.rs"

[[bin]]
name = "day3"
path = "day3.rs"

[[bin]]
name = "day4"
path = "day4.rs"

[[bin]]
name = "day5"
path = "day5.rs"

[[bin]]
name = "day6"
path = "day6.rs"

# 2017
[[bin]]
name = "y2017day12"
path = "2017/day12.rs"

[[bin]]
name = "y2017day14"
path = "2017/day14.rs"

[[bin]]
name = "y2017day23"
path = "2017/day23.rs"

# Test/examples
[[bin]]
name = "stats"
path = "stats.rs"

[[bin]]
name = "template"
path = "template.rs"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
graphlib = "0.6.3"
ureq = "2.3.1"
