[package]
name = "aoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

# 2021
[[bin]]
name = "day1"
path = "day1.rs"

[[bin]]
name = "day2"
path = "day2.rs"

[[bin]]
name = "day3"
path = "day3.rs"

[[bin]]
name = "day4"
path = "day4.rs"

[[bin]]
name = "day5"
path = "day5.rs"

[[bin]]
name = "day6"
path = "day6.rs"

[[bin]]
name = "day7"
path = "day7.rs"

[[bin]]
name = "day8"
path = "day8.rs"

[[bin]]
name = "day9"
path = "day9.rs"

[[bin]]
name = "day10"
path = "day10.rs"

[[bin]]
name = "day11"
path = "day11.rs"

[[bin]]
name = "day12"
path = "day12.rs"

[[bin]]
name = "day13"
path = "day13.rs"

[[bin]]
name = "day14"
path = "day14.rs"

[[bin]]
name = "day15"
path = "day15.rs"

[[bin]]
name = "day16"
path = "day16.rs"

[[bin]]
name = "day17"
path = "day17.rs"

[[bin]]
name = "day18"
path = "day18.rs"

[[bin]]
name = "day19"
path = "day19.rs"

[[bin]]
name = "day20"
path = "day20.rs"

[[bin]]
name = "day21"
path = "day21.rs"

[[bin]]
name = "day22"
path = "day22.rs"

[[bin]]
name = "day23"
path = "day23.rs"

[[bin]]
name = "day24"
path = "day24.rs"

[[bin]]
name = "day25"
path = "day25.rs"

# 2017
[[bin]]
name = "y2017day12"
path = "2017/day12.rs"

[[bin]]
name = "y2017day14"
path = "2017/day14.rs"

[[bin]]
name = "y2017day21"
path = "2017/day21.rs"

[[bin]]
name = "y2017day23"
path = "2017/day23.rs"

# Test/examples
[[bin]]
name = "stats"
path = "stats.rs"

[[bin]]
name = "template"
path = "template.rs"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
bitvec = "0.22.3"
cranelift = "0.79.0"
cranelift-codegen = "0.79.0"
cranelift-jit = "0.79.0"
cranelift-module = "0.79.0"
graphlib = "0.6.3"
hex = "0.4.3"
itertools = "0.10.3"
nalgebra = "0.29.0"
ndarray = { version = "0.15.4", features = ["rayon", "blas", "matrixmultiply-threading"] }
#ndarray-linalg = { version = "0.14.1", features = ["openblas-system"] }
rustc-hash = "1.1.0"
ureq = "2.3.1"

# Hurts compilation times a lot.
#[profile.release]
#codegen-units=1
#lto="thin"
